# viparr

./: .gitignore  LICENSE.txt  README.md  References.md  SConscript  dscons  env.sh  garden-install-helper  modules.txt  pyproject.toml
doc/: Makefile
doc/source/: conf.py  ffrenames.rst  forcefields.rst  index.rst  python_api.rst  release_notes.txt  tools.rst  viparr1to2.rst  viparr_normal.rst
python/: SConscript  __init__.py  compile_plugins.cxx  export_ff.cxx  forcefield.cxx  import_ff.cxx  merge_ff.cxx  parameter_matcher.cxx  pattern.cxx  pymod.cxx  rules.cxx  templated_system.cxx  typers.cxx  viparr.cxx  wrap_obj.hxx
src/: SConscript  add_system_tables.cxx  add_system_tables.hxx  append_params.cxx  append_params.hxx  base.hxx  execute_iviparr.cxx  execute_iviparr.hxx  execute_viparr.cxx  execute_viparr.hxx  ff.cxx  ff.hxx  merge_ff.cxx  merge_ff.hxx  parameter_matcher.cxx  parameter_matcher.hxx  pattern.cxx  pattern.hxx  rules.cxx  rules.hxx  template_typer.cxx  template_typer.hxx  templated_system.cxx  templated_system.hxx  version.py
src/apps/: SConscript  construct_template.cxx  dms_from_template.cxx  optimize_vsitedefs.cxx
src/importexport/: export_cmap.cxx  export_ff.cxx  export_ff.hxx  export_params.cxx  export_rules.cxx  export_templates.cxx  fs.cxx  fs.hxx  import_cmap.cxx  import_ff.cxx  import_ff.hxx  import_params.cxx  import_rules.cxx  import_templates.cxx
src/plugins/: add_nbody_table.cxx  (+19 more)
test/: python_tests.py  run.sh  test_api.py  test_exe.py  test_rigidify.py
tools/: SConscript  cli.py  compare.py  iviparr.py  neutralize.py  rigidify.py
(+131 files in other folders)
